--- a/src/View/PPConverter.form
+++ b/src/View/PPConverter.form
@@ -172,21 +172,21 @@
             </Component>
           </SubComponents>
         </Container>
-        <Container class="javax.swing.JScrollPane" name="ReelConfigurationScrollPane">
+        <Container class="javax.swing.JScrollPane" name="StackPresetsScrollPane">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Reel Configuration">
-                <Property name="tabTitle" type="java.lang.String" value="Reel Configuration"/>
+              <JTabbedPaneConstraints tabName="Stack Presets">
+                <Property name="tabTitle" type="java.lang.String" value="Stack Presets"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="ReelConfigurationListTable">
+            <Component class="javax.swing.JTable" name="StackPresetsListTable">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="cv.getReelConfigurationTableModel()" type="code"/>
+                  <Connection code="cv.getStackPresetsTableModel()" type="code"/>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
